# SWeARS

./: CMakeLists.txt  SWeARS2.0.sln  readme.txt
SWeARS2.0/: SWeARS2.0.vcxproj  main.cpp  menu.cpp  menu.h  partdb.h  readme.txt  save.cpp  save.h  types.h  weaponCreator.cpp  weaponCreator.h
include/: save.h  types.h  weaponCreator.h
src/: menu.cpp  partdb.cpp  save.cpp  types.cpp  weaponCreator.cpp
tests/: CMakeLists.txt  menu_tests.cpp  partdb_tests.cpp  save_tests.cpp  weaponCreator_tests.cpp
